--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^16.0.2",
     "google-auth-library": "^8.6.0",
     "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.8",
     "passport": "^0.6.0",
